@@ -1,3 +1,7 @@
+2011-04-25  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/cpp0x/regress/template-const2.C: New.
+
 2011-04-24  Jakub Jelinek  <jakub@redhat.com>
 
 	PR preprocessor/48740
